styling, overflow fix
- centered flex items were overflowing outside the viewport . fixed with "safe" keyword (converts vertical align to "start" when content overflows)
- styled scrollbars (firefox)
- more padding around speed dial

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 :root {
     --color: #ffffff;
     --title-opacity: 1;
-    --vertical-align: center;
+    --vertical-align: safe center;
     --top-padding: 50px;
 }
 
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+
 }
 
 body {
@@ -26,10 +27,14 @@ body {
     align-items: center;
     align-content: var(--vertical-align);
     justify-content: center;
-    padding: var(--top-padding) 25px 10px 25px;
+    padding: 60px;
     height: 100%;
     transition: opacity 150ms ease-in;
     opacity: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-color: rgba(255,255,255,0.4) rgba(0,0,0,0.2);
+    scrollbar-width: thin;
 }
 
 #noBookmarks {
