--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -1,6 +1,7 @@
 .sidenav .settings {
     width: 100%;
      padding: 25px;
+    height: 100%;
  }
 
 .sidenav h1 {
